--- a/hyperparameters.yml
+++ b/hyperparameters.yml
@@ -5,3 +5,6 @@ cartpole1:
   epsilon_init: 1 # at the begining all actions of an agent are random
   epsilon_decay: 0.9995
   epsilon_min: 0.05 # in the end agent performs random action only 5% of the time
+  network_sync_rate: 10
+  learning_rate_a: 0.0001
+  discount_factor_g: 0.99
