--- a/hyperparameters.yml
+++ b/hyperparameters.yml
@@ -3,8 +3,25 @@ cartpole1:
   replay_memory_size: 100_000
   mini_batch_size: 32
   epsilon_init: 1 # at the begining all actions of an agent are random
-  epsilon_decay: 0.9995
+  epsilon_decay: 0.999_95
   epsilon_min: 0.05 # in the end agent performs random action only 5% of the time
   network_sync_rate: 10
   learning_rate_a: 0.0001
   discount_factor_g: 0.99
+  stop_on_reward: 100_000
+  fc1_nodes: 10
+
+flappybird1:
+  env_id: FlappyBird-v0
+  learning_rate_a: 0.0001
+  discount_factor_g: 0.99
+  network_sync_rate: 10
+  replay_memory_size: 100_000
+  mini_batch_size: 32
+  epsilon_init: 1
+  epsilon_decay: 0.999_95
+  epsilon_min: 0.05
+  stop_on_reward: 100_000
+  fc1_nodes: 512
+  env_make_params:
+    use_lidar: False
